--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "lib": ["es5", "es6", "dom", "dom.iterable"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
